# LibPF

./: CMakeLists.txt
include/: CMakeLists.txt  LibPF.h
include/LibPF/: LibPF.h  libpf_global.h
include/LibPF/bspline/: bspline2d.h  def_bspline.h  multibspline2d.h  point2d.h
include/LibPF/colorutils/: cvtcolor.h  cvtcoloralloc.h
include/LibPF/colsegmentation/: ColorBase.h  ColorModel.h  skincolormodel.h  skincolorsegmentation.h  skinregionsegmentation.h
include/LibPF/distribution/: ColorDistribution.h  Gaussian.h  Gaussian1D.h  Gaussian2D.h  Gaussian3D.h  Gaussian4D.h  GaussianAlloc.h  GaussianDiag2D.h  GaussianDiag3D.h  GaussianDiag4D.h  GaussianDiagND.h  GaussianMixture.h  GaussianND.h  MotionDistribution.h  gauss2d.txt  gauss6d.txt
include/LibPF/dynamics/: ContDynamicAlloc.h  ContDynamicModel.h  ContDynamicRW.h  DiscDynamicAlloc.h  DiscDynamicModel.h  discdyn.txt
include/LibPF/filters/: ICOND.h  ParticleFilter.h
include/LibPF/imageutils/: displayutils.h  histogrammes.h  imageutils.h
include/LibPF/imgproducer/: ImgProducer.h
include/LibPF/likelihood/: likelihoodutils.h
include/LibPF/likelihood/nok/: Likelihood.h  ShapeLikelihood.h
include/LibPF/miscelleanous/: RoiManager.h  cvwrap.h  def_paramslist.h  externParams.h  globalParams.h  squarerootutils.h
include/LibPF/priors/: Prior.h  PriorAlloc.h  PriorGauss.h  PriorGaussMixture.h  Sample.h  gaussMix2d.txt  imgPrior_XY.txt
include/LibPF/shapedesc/: ShapeModels.h  shape.h  shapeutils.h
include/LibPF/stringutils/: stringutils.h
include/LibPF/targets/: Target.h  TargetAlloc.h  TargetICU.h
include/LibPF/twoDDetector/: Detector.h  FileFeedDetector.h  HogPeopleDetector.h  blobDetector.h  faceDetector.h  inputDetector.h  motionBlobDetector.h  motionDetector.h  skinBlobDetector.h  twoDDetector.h  twoDDetectorAlloc.h
include/bspline/: bspline2d.h  def_bspline.h
include/colorutils/: calclut.h  cvtcolor.h  cvtcoloralloc.h
include/colsegmentation/: ColorBase.h  ColorModel.h  skincolormodel.h  skincolorsegmentation.h  skinregionsegmentation.h
include/distribution/: ColorDistribution.h  Gaussian.h  GaussianAlloc.h  GaussianMixture.h  MotionDistribution.h  gauss1d.txt  gauss3d.txt  gauss4d.txt
include/dynamics/: ContDynamicAlloc.h  ContDynamicModel.h  ContDynamicRW.h  DiscDynamicAlloc.h  DiscDynamicModel.h  rw_monoDyn_XYTS.txt  test.txt
include/filters/: ICOND.h  ParticleFilter.h
include/imageutils/: displayutils.h  histogrammes.h  imageutils.h  watershed.h
include/imgproducer/: ImgProducer.h
include/likelihood/: likelihoodutils.h
include/likelihood/nok/: Likelihood.h  ShapeLikelihood.h
include/miscelleanous/: RoiManager.h  applipath.h  def_paramslist.h  externParams.h
include/priors/: PriorAlloc.h  PriorGauss.h  PriorGaussMixture.h  gauss2d.txt
include/shapedesc/: ShapeModels.h  shape.h  shapeutils.h
include/stringutils/: stringutils.h  tmp.txt
include/targets/: Target.h  TargetAlloc.h  TargetICU.h
include/twoDDetector/: FileFeedDetector.h  HogPeopleDetector.h  faceDetector.h  inputDetector.h  motionBlobDetector.h  motionDetector.h  skinBlobDetector.h  twoDDetector.h  twoDDetectorAlloc.h
src/: CMakeLists.txt  LibPF.cpp
src/bspline/: bspline2d.cpp  multibspline2d.cpp  point2d.cpp
src/colorutils/: calclut.cpp  cvtcolor.cpp
src/colsegmentation/: ColorBase.cpp  ColorModel.cpp  skincolormodel.cpp  skincolorsegmentation.cpp  skinregionsegmentation.cpp
src/distribution/: ColorDistribution.cpp  Gaussian.cpp  Gaussian1D.cpp  Gaussian2D.cpp  Gaussian3D.cpp  Gaussian4D.cpp  GaussianAlloc.cpp  GaussianDiag2D.cpp  GaussianDiag3D.cpp  GaussianDiag4D.cpp  GaussianDiagND.cpp  GaussianMixture.cpp  GaussianND.cpp  MotionDistribution.cpp
src/dynamics/: ContDynamicModel.cpp  ContDynamicRW.cpp  DiscDynamicModel.cpp
src/filters/: ICOND.cpp  ParticleFilter.cpp  WeightsVector.cpp
src/imageutils/: displayutils.cpp  histogrammes.cpp  imageutils.cpp
src/imgproducer/: ImgProducer.cpp
src/likelihood/: likelihoodutils.cpp
src/likelihood/nok/: Likelihood.cpp  ShapeLikelihood.cpp
src/miscelleanous/: RoiManager.cpp  paramslist.cpp
src/priors/: PriorGauss.cpp  PriorGaussMixture.cpp  Sample.cpp
src/shapedesc/: ShapeModels.cpp  shape.cpp  shapeutils.cpp
src/stringutils/: stringutils.cpp
src/targets/: Target.cpp  TargetICU.cpp
src/timeutils/: temps_cpu.cpp
src/twoDDetector/: HogPeopleDetector.cpp  faceDetector.cpp  inputDetector.cpp  motionBlobDetector.cpp  motionDetector.cpp  skinBlobDetector.cpp  twoDDetector.cpp
